Fix 'TIPO DE PECULIARIDAD : 40 TIPO COT. ESPEC. SEA, FRACCIÓN DE CUOTA: 62 FOGASA-FP/CUOT.TOTAL'. New Deduction/Cost type SEA ...